--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,5 @@ github_username:  T-Deepthy
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: minima
+theme: jekyll-theme-minimal
+
